Verbindung Front- und Back-End hergestellt

--- a/Back End/iPadAusleihe/src/main/resources/application.properties
+++ b/Back End/iPadAusleihe/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/datenbank2
+spring.datasource.url = jdbc:mysql://${MYSQL_HOST:localhost}:3306/ipadausleihe
 spring.datasource.username=newuser
 spring.datasource.password=password
 
